# Utilities

cpp/: CMakeLists.txt  Dockerfile  docker-compose.yml
cpp/src/: CMakeLists.txt
cpp/src/common/: CMakeLists.txt
cpp/src/common/geometries/: point.cpp  rect.cpp  vector2d.cpp
cpp/src/common/types/: rect.cpp  vector2d.cpp
cpp/src/include/common/: exception.h  marcos.h
cpp/src/include/common/geometries/: point.h  rect.h  shape2d.h  vector2d.h
cpp/src/include/common/types/: rect.h  vector2d.h
cpp/src/include/tree/: inside_handler.h  intersect_handler.h  kd_tree.h  quad_tree.h
cpp/src/include/tree/node/: kd_tree_node.h  quad_tree_internal_node.h  quad_tree_leaf_node.h  quad_tree_node.h
cpp/src/tree/: CMakeLists.txt  inside_handler.cpp  intersect_handler.cpp  kd_tree.cpp  quad_tree.cpp
cpp/src/tree/node/: CMakeLists.txt  kd_tree_node.cpp  quad_tree_internal_node.cpp  quad_tree_leaf_node.cpp  quad_tree_node.cpp
cpp/test/: CMakeLists.txt
cpp/test/include/: test_utils.h
cpp/test/tree/: kd_tree_test.cpp  quad_tree_test.cpp
cpp/test/tree/node/: kd_tree_node_test.cpp
cpp/visualization/: CMakeLists.txt
cpp/visualization/tree/: quad_tree_viz.cpp
